--- a/SFSimulator.Web/src/app/dialogs/info-dialog/info-dialog.component.html
+++ b/SFSimulator.Web/src/app/dialogs/info-dialog/info-dialog.component.html
@@ -14,7 +14,7 @@
       - Gold from pet fruits (potion selling)<br />
       - Additional events (basic event cycle is implemented)<br />
       <br />
-      Note that simulation below level 300 are very unrealiable<br />
+      Note that simulation below level 300 are very unreliable<br />
       (base stat cost currently starts at 10mln)<br />
       <br />
       If you found a bug or want to leave a suggestion, you<br />
