--- a/SFSimulator.Web/src/app/dialogs/simulation-options-dialog/simulation-options-dialog.component.html
+++ b/SFSimulator.Web/src/app/dialogs/simulation-options-dialog/simulation-options-dialog.component.html
@@ -16,4 +16,4 @@
   <mat-card-actions class="align-self-center">
     <button [mat-dialog-close]="data" [disabled]="data.simulationType == 'Days' ? data.simulateUntil > 3000 || data.simulateUntil <= 0 : data.simulateUntil > 800 || data.simulateUntil <= 0" mat-stroked-button color="accent">Start Simulation</button>
   </mat-card-actions>
-<mat-card/>
+</mat-card>
