Added more responsiveness to layout Added option to save simulation results Added option to view saved simulation results Characters logged through sftools will now be automatically saved Added option to explictly save current configuration Total and average gains are calculated on backend Gains are now rounded up to 3 decimal places

--- a/SFSimulator.Web/src/app/components/simulation-result-charts/simulation-result-charts.component.html
+++ b/SFSimulator.Web/src/app/components/simulation-result-charts/simulation-result-charts.component.html
@@ -1,5 +1,5 @@
-<div class=" row" styl="height-auto" [@slideInOutY]="chartVisible ? 'in' : 'out'" style="overflow-x: clip">
-    <div class="col-xxl-6 pt-5">
+<div class="row overflow-hidden" [@slideInOutY]="chartVisible ? 'in' : 'out'">
+    <div class="col-md-6">
       <div class="row">
         <div align="center" [@slideInOutX]="baseStatChartType == 'Daily' ? 'in' : 'out'">
           <mat-slider class="p-auto" min="1" [max]="lastDay" step="1" discrete="true">
@@ -20,7 +20,7 @@
               [type]="'bar'">
       </canvas>
     </div>
-    <div class="col-xxl-6 py-5">
+    <div class="col-md-6">
       <div class="row">
         <div align="center" [@slideInOutX]="xpChartType == 'Daily' ? 'in' : 'out'">
           <mat-slider min="1" [max]="lastDay" step="1" discrete="true" align="center">
