--- a/SFSimulator.Web/src/app/dialogs/sftoolslogin/sftoolslogin.component.html
+++ b/SFSimulator.Web/src/app/dialogs/sftoolslogin/sftoolslogin.component.html
@@ -1,6 +1,5 @@
-
-<div class="container-fluid w-100 h-100 bg-dark border border-white overflow-hidden px-0">
-  <div class="w-100 h-100 iframe p-0 m-0">
-      <iframe id="sftools" class="bg-dark w-100 border border-white h-100 p-0 m-0" [attr.src]="iframeSource" title="Login through SFTools"></iframe>
+<div class='container-fluid w-100 h-100 bg-dark border border-white overflow-hidden px-0'>
+  <div class='w-100 h-100 iframe p-0 m-0' [attr.hidden]='hide'>
+      <iframe id='sftools' class='bg-dark w-100 border border-white h-100 p-0 m-0' [attr.src]='iframeSource' title='Login through SFTools'></iframe>
     </div>
 </div>
