--- a/SFSimulator.Web/src/app/sfsimulator.component.html
+++ b/SFSimulator.Web/src/app/sfsimulator.component.html
@@ -1,22 +1,3 @@
-<tool-bar></tool-bar>
-<div class="row mx-3 d-flex">
-  <div class='col-sm-3 m-0 mt-2 p-0'>
-    <simulation-config (configEmitter)="saveForm($event)" class=""></simulation-config>
-  </div>
-  <div class="col-sm-3 mt-2">
-    <div class="d-inline-flex d-flex w-100">
-      <button style="width: 33%" mat-stroked-button class="big-button" (click)="loginThroughSFTools()">Endpoint</button>
-      <button style="width: 33%" mat-stroked-button class="big-button" [disabled]="!simulationConfig || simulationBlocked" (click)="showDialog()">Simulate</button>
-    </div>
-    <div class="mt-2 align-items-center">
-        <div *ngIf="simulationResult" @ngIfVerticalSlide>
-          <character-details [data]="simulationResult">
-          </character-details>
-        </div>
-    </div>
-  </div>
-  <div class="col-sm-6" style="overflow-y: clip">
-    <simulation-result-charts [simulatedDays]="simulationResult?.simulatedDays"></simulation-result-charts>
-  </div>
-</div>
+<tool-bar class=""></tool-bar>
+<router-outlet class="mb-0 pb-0"></router-outlet>
 
