--- a/SFSimulator.Web/src/app/components/character-details/character-details.component.html
+++ b/SFSimulator.Web/src/app/components/character-details/character-details.component.html
@@ -1,41 +1,48 @@
-<div *ngIf="data" class="row justify-content-center text-white">
-  <mat-card matRipple class="bg-dark mt-2" style="width:70%">
-    <mat-card-header><mat-card-subtitle class="text-primary">After</mat-card-subtitle></mat-card-header>
-    <div class="d-flex flex-row justify-content-between mt-2">
-      <p class="card-text">Days passed:</p>
-      <span>{{data.days}}</span>
+<div class='row text-white justify-content-between' *ngIf='data'>
+  <div class='row text-center mb-2'><h1>Days passed: {{data.days}}</h1></div>
+  <div class='col-sm-5 d-sm-flex flex-row-reverse'>
+    <div class="row min-w-50">
+      <mat-card align='right' matRipple class="bg-dark">
+        <mat-card-header><mat-card-title class='text-primary'>Previously</mat-card-title></mat-card-header>
+        <div class='p-4 pb-2'>
+          <div class='d-flex flex-row justify-content-between'>
+            <p class='pe-2'>Level:</p>
+            <span>{{data.characterPreviously.level}}</span>
+          </div>
+          <div class='d-flex flex-row justify-content-between'>
+            <p class='pe-2'>Base-stats:</p>
+            <span>{{data.characterPreviously.baseStat}}</span>
+          </div>
+          <div class='d-flex flex-row justify-content-between'>
+            <p class='pe-2'>Experience:</p>
+            <span>{{data.characterPreviously.experience}}</span>
+          </div>
+        </div>
+      </mat-card>
     </div>
-    <div class="d-flex flex-row justify-content-between">
-      <p class="card-text">Level:</p>
-      <span>{{data.characterAfter.level}}</span>
+  </div>
+  <div class='col-sm-2 py-3 d-flex align-items-center justify-content-center'>
+    <div class='arrows' alt='arrows pointing right'></div>
+  </div>
+  <div class='col-sm-5 d-sm-flex flex-row'>
+    <div class="row min-w-50">
+      <mat-card align='right' matRipple class='bg-dark w-100'>
+        <mat-card-header><mat-card-title class='text-primary'>After</mat-card-title></mat-card-header>
+        <div class='p-4 pb-2'>
+          <div class='d-flex flex-row justify-content-between'>
+            <p class='pe-2'>Level:</p>
+            <span>{{data.characterAfter.level}}</span>
+          </div>
+          <div class='d-flex flex-row justify-content-between'>
+            <p class='pe-2'>Base-stats:</p>
+            <span>{{data.characterAfter.baseStat}}</span>
+          </div>
+          <div class='d-flex flex-row justify-content-between'>
+            <p class='pe-2'>Experience:</p>
+            <span>{{data.characterAfter.experience}}</span>
+          </div>
+        </div>
+      </mat-card>
     </div>
-    <div class="d-flex flex-row justify-content-between">
-      <p class="card-text">Base-stats:</p>
-      <span>{{data.characterAfter.baseStat}}</span>
-    </div>
-    <div class="d-flex flex-row justify-content-between">
-      <p class="card-text">Experience:</p>
-      <span>{{data.characterAfter.experience}}</span>
-    </div>
-  </mat-card>
+  </div>
 </div>
-
-<div *ngIf="data" class="row justify-content-center text-white">
-  <mat-card matRipple class="bg-dark mt-1" style="width:70%">
-    <mat-card-header><mat-card-subtitle class="text-primary">Previously</mat-card-subtitle></mat-card-header>
-    <div class="d-flex flex-row justify-content-between mt-2">
-      <p class="card-text">Level:</p>
-      <span>{{data.characterPreviously.level}}</span>
-    </div>
-    <div class="d-flex flex-row justify-content-between">
-      <p class="card-text">Base-stats:</p>
-      <span>{{data.characterPreviously.baseStat}}</span>
-    </div>
-    <div class="d-flex flex-row justify-content-between">
-      <p class="card-text">Experience:</p>
-      <span>{{data.characterPreviously.experience}}</span>
-    </div>
-  </mat-card>
-</div>
-
-
