--- a/SFSimulator.Web/src/styles.scss
+++ b/SFSimulator.Web/src/styles.scss
@@ -29,6 +29,7 @@ $dark-theme: mat.define-dark-theme( ( color: ( primary: $my-app-primary, accent:
 $light-theme: mat.define-light-theme( ( color: ( primary: $my-app-primary, accent: $my-app-accent, warn: $my-app-warn, ), ) );
 
 @include mat.all-component-themes($dark-theme);
+@include mat.table-theme($light-theme);
 
 .mat-mdc-snack-bar-container {
   &.bg-success {
@@ -50,4 +51,12 @@ $light-theme: mat.define-light-theme( ( color: ( primary: $my-app-primary, accen
     --mat-mdc-snack-bar-button-color: #fff;
     --mdc-snackbar-supporting-text-color: #fff;
   }
+}
+
+.arrows {
+  background-image: url('assets/arrows.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 4rem;
+  height: 4rem;
 }
