--- a/SFSimulator.Web/src/app/layout/simulator/simulator.component.html
+++ b/SFSimulator.Web/src/app/layout/simulator/simulator.component.html
@@ -8,7 +8,7 @@
         <button mat-stroked-button class='button text-warning border-warning' (click)='loginThroughSFTools()'>Endpoint</button>
         <button mat-stroked-button class='ms-1 button text-primary border-primary' [disabled]='!simulationConfig || simulationBlocked' (click)='showSimulationDialog()'>Simulate</button>
         <span class='toolbar-spacer d-none d-sm-block'></span>
-        <button mat-stroked-button class='ms-1 button border-success text-success' *ngIf='simulationResult' (click)="saveResult()">Save</button>
+        <button mat-stroked-button class='ms-1 button border-success text-success' *ngIf='simulationResult' (click)="saveResult()" matTooltip="Save the simulation result" matTooltipShowDelay="400">Save</button>
       </div>
     </div>
     <div class='row mt-3'>
