--- a/SFSimulator.Web/src/app/sfsimulator.component.html
+++ b/SFSimulator.Web/src/app/sfsimulator.component.html
@@ -1,3 +1,10 @@
-<tool-bar class=""></tool-bar>
-<router-outlet class="mb-0 pb-0"></router-outlet>
+<div class="d-flex flex-column h-100">
+  <div>
+    <tool-bar></tool-bar>
+  </div>
+  <div class="flex-grow-1" style="overflow-y: auto">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+
 
