New schedule system for own events and actions New option for amount of daily spins New option for amount of guard hours Added patch notes system Added new website icon Gold Pit level is no longer raised automatically every 15 days Bugfix: Character without tower unlocked had -1 value in tower field Bugfix: Bonus quest were not generated if drink beer one by one wasn't selected Bugfix: Current day tooltip when looking at daily chart was not visible

--- a/SFSimulator.Web/src/app/dialogs/info-dialog/info-dialog.component.html
+++ b/SFSimulator.Web/src/app/dialogs/info-dialog/info-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="bg-dark">
-  <h1 mat-dialog-title>SF Simulator in a nutshell</h1>
+  <h1 class="pt-4 ps-4">SF Simulator in a nutshell</h1>
   <div mat-dialog-content>
     <p>
       SF Simulator is a tool for simulating/forecasting base<br />
@@ -19,7 +19,8 @@
       <br />
       If you found a bug or want to leave a suggestion, you<br />
       can contact me here:<br />
-      Discord: <u>us3r#2137</u>
+      <br />
+      Discord: <strong>abus3r_</strong>
     </p>
   </div>
   <div class="d-flex justify-content-end" mat-dialog-actions>
