--- a/SFSimulator.Web/src/app/layout/simulator/simulator.component.html
+++ b/SFSimulator.Web/src/app/layout/simulator/simulator.component.html
@@ -1,8 +1,8 @@
-<div class='row mx-3 d-flex'>
+<div class='row mx-3 d-flex main'>
   <div class='col-md-3 m-0 mt-2 p-0'>
     <simulation-config (configEmitter)='saveForm($event)'></simulation-config>
   </div>
-  <div class='col-md-9' style='overflow-y: clip'>
+  <div class='col-md-9'>
     <div class='row mt-2'>
       <div class='d-flex d-inline-flex w-100'>
         <button mat-stroked-button class='button text-warning border-warning' (click)='loginThroughSFTools()'>Endpoint</button>
