--- a/SFSimulator.Web/src/app/components/simulation-config/simulation-config.component.html
+++ b/SFSimulator.Web/src/app/components/simulation-config/simulation-config.component.html
@@ -10,7 +10,7 @@
           <div class="d-flex flex-column ms-3 mt-3">
             <mat-form-field appearance="outline">
               <mat-label>Level</mat-label>
-              <input matInput type="number" formControlName="level" placeholder="0" min="1" max="700">
+              <input matInput type="number" formControlName="level" placeholder="0" min="1" max="700" />
             </mat-form-field>
             <mat-form-field appearance="outline">
               <mat-label>Base Stats</mat-label>
@@ -26,9 +26,7 @@
             </mat-form-field>
             <mat-form-field appearance="outline">
               <mat-label>Gold Pit level</mat-label>
-              <input matInput type="number" formControlName="goldPitLevel" placeholder="0" min="0" max="100"
-                     matTooltip="Goldpit lvl is raised by 1 every 15 days"
-                     [matTooltipPosition]="'right'" />
+              <input matInput type="number" formControlName="goldPitLevel" placeholder="0" min="0" max="100" />
             </mat-form-field>
             <mat-form-field appearance="outline">
               <mat-label>Hydra</mat-label>
@@ -134,12 +132,31 @@
                 <mat-option *ngFor="let priority of questPriority" [value]="priority">{{priority}}</mat-option>
               </mat-select>
             </mat-form-field>
-            <mat-slide-toggle class="mb=3" formControlName="drinkBeerOneByOne">
+            <mat-slide-toggle formControlName="drinkBeerOneByOne">
               Drink Beer One By One
             </mat-slide-toggle>
             <mat-slide-toggle class="mt-3" formControlName="skipCalendar">
               Skip Calendar
             </mat-slide-toggle>
+            <mat-form-field class="mt-3" appearance="outline">
+              <mat-label>Spin Amount</mat-label>
+              <mat-select formControlName='spinAmount'>
+                <mat-option *ngFor="let spin of spinTactics" [value]="spin">{{spin}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+              <mat-label>Hours of Guard</mat-label>
+              <input matInput formControlName="dailyGuard"/>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+              <mat-label>Schedule</mat-label>
+              <mat-select [value]="defaultScheduleOption" formControlName="schedule">
+                <mat-option *ngFor="let schedule of savedSchedules" [value]="schedule">
+                  {{schedule.name}}
+                </mat-option>
+                <p class="pt-3 ps-2">You can add other schedules in Custom Schedule tab</p>
+              </mat-select>
+            </mat-form-field>
           </div>
         </ng-template>
       </mat-tab>
