--- a/SFSimulator.Web/src/app/components/simulation-result-charts/simulation-result-charts.component.html
+++ b/SFSimulator.Web/src/app/components/simulation-result-charts/simulation-result-charts.component.html
@@ -1,4 +1,4 @@
-<div class="row overflow-hidden" [@slideInOutY]="chartVisible ? 'in' : 'out'">
+<div class="row" [@slideInOutY]="chartVisible ? 'in' : 'out'">
     <div class="col-md-6">
       <div class="row">
         <div align="center" [@slideInOutX]="baseStatChartType == 'Daily' ? 'in' : 'out'">
