Removed unused field in Maria21DataDTO Added credits in main view (bottom right corner) Added option to save/load configuration Changed text color of select list items to brighter Fixed a bug which threw an error if custom schedule had 0 weeks

--- a/SFSimulator.Web/src/app/components/simulation-config/simulation-config.component.scss
+++ b/SFSimulator.Web/src/app/components/simulation-config/simulation-config.component.scss
@@ -8,3 +8,32 @@ mat-slide-toggle {
   min-width: 13em;
 }
 
+.btn-ctn {
+  background-color: #673AB7;
+  min-width: 48px;
+  max-width: 48px;
+  margin: 0;
+  float: right;
+}
+
+.form-ctn {
+  width: calc(100% - 48px);
+  float:left;
+}
+
+.config-info {
+  padding: 10px 16px 0 16px;
+  color: rgb(160,160,160);
+  border-top: 1px solid black;
+  border-image: linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255,0), rgba(250,250,250,1), rgba(250,250,250,1), rgba(255,255,255,0), rgba(255,255,255,0)) 10%;
+  margin-bottom: 5px;
+}
+.config-name {
+  padding: 0px 16px 0 16px;
+  color: rgb(160,160,160);
+  margin-bottom: 0px;
+}
+
+.mat-mdc-option-active {
+  --mdc-theme-primary: #9933ff;
+}
