--- a/SFSimulator.Web/src/app/components/simulation-config/simulation-config.component.html
+++ b/SFSimulator.Web/src/app/components/simulation-config/simulation-config.component.html
@@ -1,164 +1,188 @@
-<form [formGroup]='simulationOptions'>
-  <mat-tab-group dynamicHeight backgroundColor="primary" mat-stretch-tabs="true" preserveContent="true">
+<div class="ctn">
+  <div class="form-ctn">
+    <form [formGroup]='simulationOptions'>
+      <mat-tab-group dynamicHeight backgroundColor="primary" mat-stretch-tabs="true" preserveContent="true">
 
-      <mat-tab>
-        <ng-template mat-tab-label>
-          <mat-icon fontIcon="person" class="me-2"></mat-icon>
-          Account
-        </ng-template>
-        <ng-template matTabContent>
-          <div class="d-flex flex-column ms-3 mt-3">
-            <mat-form-field appearance="outline">
-              <mat-label>Level</mat-label>
-              <input matInput type="number" formControlName="level" placeholder="0" min="1" max="700" />
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label>Base Stats</mat-label>
-              <input matInput type="number" formControlName="baseStat" placeholder="0" min="0" />
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label>Experience</mat-label>
-              <input matInput type="number" formControlName="experience" placeholder="0" min="0" max="1500000000" />
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label>Academy level</mat-label>
-              <input matInput type="number" formControlName="academyLevel" placeholder="0" min="0" max="20" />
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label>Gold Pit level</mat-label>
-              <input matInput type="number" formControlName="goldPitLevel" placeholder="0" min="0" max="100" />
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label>Hydra</mat-label>
-              <input matInput type="number" formControlName="hydraHeads" placeholder="0" min="0" max="20" />
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label>Gem Mine Level</mat-label>
-              <input matInput type="number" formControlName="gemMineLevel" placeholder="0" min="0" max="100" />
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label>Treasury Level</mat-label>
-              <input matInput type="number" formControlName="treasuryLevel" placeholder="0" min="0" max="45" />
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label>Mount</mat-label>
-              <mat-select formControlName="mountType">
-                <mat-option *ngFor="let mount of mountType" [value]="mount">{{mount}}</mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
-        </ng-template>
-      </mat-tab>
-
-
-      <mat-tab>
-        <ng-template mat-tab-label>
-          <mat-icon fontIcon="import_contacts" class="me-2"></mat-icon>
-          Bonuses
-        </ng-template>
-        <ng-template matTabContent>
-          <div class="d-flex flex-column ms-3 mt-3">
-            <mat-form-field appearance="outline">
-              <mat-label for="scrapbookFillness">Scrapbook</mat-label>
-              <input matInput type="number" formControlName="scrapbookFillness" placeholder="0" min="0" max="100" />
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label for="xpGuildBonus">XP Guild Bonus</mat-label>
-              <input matInput type="number" formControlName="xpGuildBonus" placeholder="0" min="0" max="200" />
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label for="xpRuneBonus">XP Rune Bonus</mat-label>
-              <input matInput type="number" formControlName="xpRuneBonus" placeholder="0" min="0" max="10" />
-            </mat-form-field>
-            <mat-slide-toggle class="mb-3" formControlName="hasExperienceScroll">
-              Experience Scroll
-            </mat-slide-toggle>
-            <mat-form-field appearance="outline">
-              <mat-label for="tower">Tower</mat-label>
-              <input matInput type="number" formControlName="tower" placeholder="0" min="0" max="100" />
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label for="goldGuildBonus">Gold Guild Bonus</mat-label>
-              <input matInput type="number" formControlName="goldGuildBonus" placeholder="0" min="0" max="200" />
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label for="goldRuneBonus">Gold Rune Bonus</mat-label>
-              <input matInput type="number" formControlName="goldRuneBonus" placeholder="0" min="0" max="50" />
-            </mat-form-field>
-            <mat-slide-toggle formControlName="hasGoldScroll">
-              Gold Scroll
-            </mat-slide-toggle>
-          </div>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <mat-icon fontIcon="person" class="me-2"></mat-icon>
+            Account
+          </ng-template>
+          <ng-template matTabContent>
+            <div class="d-flex flex-column ms-3 mt-3">
+              <mat-form-field appearance="outline">
+                <mat-label>Level</mat-label>
+                <input matInput type="number" formControlName="level" placeholder="0" min="1" max="700" />
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label>Base Stats</mat-label>
+                <input matInput type="number" formControlName="baseStat" placeholder="0" min="0" />
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label>Experience</mat-label>
+                <input matInput type="number" formControlName="experience" placeholder="0" min="0" max="1500000000" />
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label>Academy level</mat-label>
+                <input matInput type="number" formControlName="academyLevel" placeholder="0" min="0" max="20" />
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label>Gold Pit level</mat-label>
+                <input matInput type="number" formControlName="goldPitLevel" placeholder="0" min="0" max="100" />
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label>Hydra</mat-label>
+                <input matInput type="number" formControlName="hydraHeads" placeholder="0" min="0" max="20" />
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label>Gem Mine Level</mat-label>
+                <input matInput type="number" formControlName="gemMineLevel" placeholder="0" min="0" max="100" />
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label>Treasury Level</mat-label>
+                <input matInput type="number" formControlName="treasuryLevel" placeholder="0" min="0" max="45" />
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label>Mount</mat-label>
+                <mat-select formControlName="mountType">
+                  <mat-option *ngFor="let mount of mountType" [value]="mount">{{mount}}</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
           </ng-template>
         </mat-tab>
 
 
-      <mat-tab>
-        <ng-template mat-tab-label>
-          <mat-icon fontIcon="flaky" class="me-2"></mat-icon>
-          Playstyle
-        </ng-template>
-        <ng-template matTabContent>
-          <div class="d-flex flex-column mt-3 ms-3">
-            <mat-form-field appearance="outline">
-              <mat-label>Daily Thirst</mat-label>
-              <input matInput type="number" formControlName="dailyThirst" placeholder="0" min="0" max="320" step="20" />
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label>Quest Priority</mat-label>
-              <mat-select formControlName="questPriority">
-                <mat-option *ngFor="let priority of questPriority" [value]="priority">{{priority}}</mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label>Hybrid Ratio</mat-label>
-              <input matInput type="number" formControlName="hybridRatio" placeholder="0" min="0" max="1" step="0.05"
-                     matTooltip="e.g. 1 xp = 4 gold then type 0.25"
-                     [matTooltipPosition]="'right'" />
-            </mat-form-field>
-            <mat-slide-toggle class="mb-3"
-                              formControlName="switchPriority"
-                              matTooltip="Determines if character switches quest priority after X level"
-                              [matTooltipPosition]="'right'">
-              Should switch priority?
-            </mat-slide-toggle>
-            <mat-form-field appearance="outline">
-              <mat-label>Switch level</mat-label>
-              <input type="number" matInput formControlName="switchLevel" />
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label>Priority after switch</mat-label>
-              <mat-select formControlName="priorityAfterSwitch">
-                <mat-option *ngFor="let priority of questPriority" [value]="priority">{{priority}}</mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-slide-toggle formControlName="drinkBeerOneByOne">
-              Drink Beer One By One
-            </mat-slide-toggle>
-            <mat-slide-toggle class="mt-3" formControlName="skipCalendar">
-              Skip Calendar
-            </mat-slide-toggle>
-            <mat-form-field class="mt-3" appearance="outline">
-              <mat-label>Spin Amount</mat-label>
-              <mat-select formControlName='spinAmount'>
-                <mat-option *ngFor="let spin of spinTactics" [value]="spin">{{spin}}</mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label>Hours of Guard</mat-label>
-              <input matInput formControlName="dailyGuard"/>
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label>Schedule</mat-label>
-              <mat-select [value]="defaultScheduleOption" formControlName="schedule">
-                <mat-option *ngFor="let schedule of savedSchedules" [value]="schedule">
-                  {{schedule.name}}
-                </mat-option>
-                <p class="pt-3 ps-2">You can add other schedules in Custom Schedule tab</p>
-              </mat-select>
-            </mat-form-field>
-          </div>
-        </ng-template>
-      </mat-tab>
-  </mat-tab-group>
-</form>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <mat-icon fontIcon="import_contacts" class="me-2"></mat-icon>
+            Bonuses
+          </ng-template>
+          <ng-template matTabContent>
+            <div class="d-flex flex-column ms-3 mt-3">
+              <mat-form-field appearance="outline">
+                <mat-label for="scrapbookFillness">Scrapbook</mat-label>
+                <input matInput type="number" formControlName="scrapbookFillness" placeholder="0" min="0" max="100" />
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label for="xpGuildBonus">XP Guild Bonus</mat-label>
+                <input matInput type="number" formControlName="xpGuildBonus" placeholder="0" min="0" max="200" />
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label for="xpRuneBonus">XP Rune Bonus</mat-label>
+                <input matInput type="number" formControlName="xpRuneBonus" placeholder="0" min="0" max="10" />
+              </mat-form-field>
+              <mat-slide-toggle class="mb-3" formControlName="hasExperienceScroll">
+                Experience Scroll
+              </mat-slide-toggle>
+              <mat-form-field appearance="outline">
+                <mat-label for="tower">Tower</mat-label>
+                <input matInput type="number" formControlName="tower" placeholder="0" min="0" max="100" />
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label for="goldGuildBonus">Gold Guild Bonus</mat-label>
+                <input matInput type="number" formControlName="goldGuildBonus" placeholder="0" min="0" max="200" />
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label for="goldRuneBonus">Gold Rune Bonus</mat-label>
+                <input matInput type="number" formControlName="goldRuneBonus" placeholder="0" min="0" max="50" />
+              </mat-form-field>
+              <mat-slide-toggle formControlName="hasGoldScroll">
+                Gold Scroll
+              </mat-slide-toggle>
+            </div>
+          </ng-template>
+        </mat-tab>
+
+
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <mat-icon fontIcon="flaky" class="me-2"></mat-icon>
+            Playstyle
+          </ng-template>
+          <ng-template matTabContent>
+            <div class="d-flex flex-column mt-3 ms-3">
+              <mat-form-field appearance="outline">
+                <mat-label>Daily Thirst</mat-label>
+                <input matInput type="number" formControlName="dailyThirst" placeholder="0" min="0" max="320" step="20" />
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label>Quest Priority</mat-label>
+                <mat-select formControlName="questPriority">
+                  <mat-option *ngFor="let priority of questPriority" [value]="priority">{{priority}}</mat-option>
+                </mat-select>
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label>Hybrid Ratio</mat-label>
+                <input matInput type="number" formControlName="hybridRatio" placeholder="0" min="0" max="1" step="0.05"
+                       matTooltip="e.g. 1 xp = 4 gold then type 0.25"
+                       [matTooltipPosition]="'right'" />
+              </mat-form-field>
+              <mat-slide-toggle class="mb-3"
+                                formControlName="switchPriority"
+                                matTooltip="Determines if character switches quest priority after X level"
+                                [matTooltipPosition]="'right'">
+                Should switch priority?
+              </mat-slide-toggle>
+              <mat-form-field appearance="outline">
+                <mat-label>Switch level</mat-label>
+                <input type="number" matInput formControlName="switchLevel" />
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label>Priority after switch</mat-label>
+                <mat-select formControlName="priorityAfterSwitch">
+                  <mat-option *ngFor="let priority of questPriority" [value]="priority">{{priority}}</mat-option>
+                </mat-select>
+              </mat-form-field>
+              <mat-slide-toggle formControlName="drinkBeerOneByOne">
+                Drink Beer One By One
+              </mat-slide-toggle>
+              <mat-slide-toggle class="mt-3" formControlName="skipCalendar">
+                Skip Calendar
+              </mat-slide-toggle>
+              <mat-form-field class="mt-3" appearance="outline">
+                <mat-label>Spin Amount</mat-label>
+                <mat-select formControlName='spinAmount'>
+                  <mat-option *ngFor="let spin of spinTactics" [value]="spin">{{spin}}</mat-option>
+                </mat-select>
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label>Hours of Guard</mat-label>
+                <input matInput formControlName="dailyGuard"/>
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label>Schedule</mat-label>
+                <mat-select [value]="defaultScheduleOption" formControlName="schedule">
+                  <mat-option *ngFor="let schedule of savedSchedules" [value]="schedule">
+                    {{schedule.name}}
+                  </mat-option>
+                  <p class="pt-3 ps-2">You can add other schedules in Custom Schedule tab</p>
+                </mat-select>
+              </mat-form-field>
+            </div>
+          </ng-template>
+        </mat-tab>
+      </mat-tab-group>
+    </form>
+  </div>
+  <div class="btn-ctn">
+    <button mat-icon-button [matMenuTriggerFor]="configMenu"><mat-icon>expand_more</mat-icon></button>
+    <mat-menu #configMenu>
+      <button mat-menu-item (click)="openConfigurationDialog()">Load</button>
+      <button mat-menu-item [matMenuTriggerFor]="saveConfig" [disabled]="!savedConfiguration">Save</button>
+      <button mat-menu-item [matMenuTriggerFor]="saveNewConfig">Save As New</button>
+      <p class="config-info">Current configuration:</p>
+      <p class='config-name' *ngIf="savedConfiguration">{{savedConfiguration.name}}</p>
+      <p class='config-name text-center' *ngIf="!savedConfiguration">-</p>
+    </mat-menu>
+
+    <mat-menu #saveConfig>
+      <button mat-menu-item (click)="saveConfiguration(true)">Everything</button>
+      <button mat-menu-item (click)="saveConfiguration(false)">Only Playstyle</button>
+    </mat-menu>
+    <mat-menu #saveNewConfig>
+      <button mat-menu-item (click)="saveConfigurationAsNew(true)">Everything</button>
+      <button mat-menu-item (click)="saveConfigurationAsNew(false)">Only Playstyle</button>
+    </mat-menu>
+  </div>
+</div>
