--- a/SFSimulator.Web/src/app/layout/custom-schedule/custom-schedule.component.html
+++ b/SFSimulator.Web/src/app/layout/custom-schedule/custom-schedule.component.html
@@ -2,7 +2,7 @@
 
 
   <!-- AutoComplete lookup -->
-  <div class="d-flex justify-content-center">
+  <div class="d-flex mt-3 justify-content-center">
     <button mat-icon-button (click)="openInfoDialog()"><mat-icon fontIcon="info"></mat-icon></button>
     <mat-form-field class="w-50" appearance="outline">
       <mat-label>Schedule</mat-label>
