--- a/SFSimulator.Web/src/app/layout/simulation-result/simulation-result.component.html
+++ b/SFSimulator.Web/src/app/layout/simulation-result/simulation-result.component.html
@@ -1,3 +1,4 @@
+<div>
 <div class="h-100 bg-gray">
   <p-table #table [value]="dataSource" dataKey="timestamp" [tableStyle]="{'min-width': '80rem; color: white'}" [scrollable]="true" scrollHeight="flex">
     <ng-template pTemplate="header">
@@ -128,4 +129,5 @@
       </tr>
     </ng-template>
   </p-table>
+</div>
 </div>
