--- a/SFSimulator.Web/src/app/components/simulation-config/simulation-config.component.html
+++ b/SFSimulator.Web/src/app/components/simulation-config/simulation-config.component.html
@@ -143,7 +143,7 @@
               <mat-form-field class="mt-3" appearance="outline">
                 <mat-label>Spin Amount</mat-label>
                 <mat-select formControlName='spinAmount'>
-                  <mat-option *ngFor="let spin of spinTactics" [value]="spin">{{spin}}</mat-option>
+                  <mat-option *ngFor="let spin of spinTactics" [value]="spin.value">{{spin.label}}</mat-option>
                 </mat-select>
               </mat-form-field>
               <mat-form-field appearance="outline">
