--- a/SFSimulator.Web/src/app/sfsimulator.component.html
+++ b/SFSimulator.Web/src/app/sfsimulator.component.html
@@ -2,7 +2,7 @@
   <div>
     <tool-bar></tool-bar>
   </div>
-  <div class="flex-grow-1 m-0">
+  <div class="flex-grow-1 m-0 scrollbar">
     <router-outlet></router-outlet>
   </div>
 </div>
