--- a/SFSimulator.Web/src/styles.scss
+++ b/SFSimulator.Web/src/styles.scss
@@ -71,16 +71,16 @@ $light-theme: mat.define-light-theme( ( color: ( primary: $my-app-primary, accen
   overflow-y: auto;
 }
 
-.scrollbar::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width: 10px;
   height: 10px;
 }
 
-.scrollbar::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   background: rgb(20, 20, 20);
 }
 
-.scrollbar::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background-color: #673AB7;
   border-radius: 100px;
   border: 3px solid #673AB7;
