Added credits for dungeons data

--- a/SFSimulator.Web/src/app/layout/test/test.component.html
+++ b/SFSimulator.Web/src/app/layout/test/test.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row pt-5">
     <div class="col-9 pt-4 bg-darken" [formGroup]="character">
+      <p>Data of dungeon enemies comes from <a target="blank" href="https://sftools.mar21.eu/">sftools</a> - thank you mar21!</p>
       <div class="d-inline-flex flex-column mt-1">
 
         <!--CHARACTER NODE-->
