--- a/SFSimulator.Web/src/app/layout/test/test.component.html
+++ b/SFSimulator.Web/src/app/layout/test/test.component.html
@@ -246,12 +246,15 @@
           <mat-option *ngFor="let e of selectedDungeon?.enemies" [value]="e">{{ e.name }}</mat-option>
         </mat-select>
       </mat-form-field>
-      <button mat-stroked-button (click)="simulateDungeon()">Simulate</button>
-      <div *ngIf="result">
+      <button mat-stroked-button [disabled]='isInProgress === true' (click)="simulateDungeon()">Simulate</button>
+      <div *ngIf="!isInProgress && result">
         <p>Result: </p>
         <p>Iterations: {{ result.iterations }}</p>
         <p>Won Fights: {{ result.wonFights }}</p>
         <p>Win Rate: {{ (result.wonFights / result.iterations) | percent }}</p>
+      </div>
+      <div *ngIf="isInProgress" class="align-self-center mt-2">
+        <mat-spinner></mat-spinner>
       </div>
     </div>
   </div>
